separate into CSS file

--- a/index.html
+++ b/index.html
@@ -103,10 +103,18 @@
 
   <br>
   <!-- Footer -->
-  <footer class="footer">
-    <p>Website managed by [Your Name]</p>
-  </footer>
+    <footer class="footer">
+            
+            <address>
+                <p>Contact:</p>
+                <p>Cao Quynh An – Budapest, Hungary</p>
+                <a href="mailto:ancaoquynh@gmail.com">ancaoquynh@gmail.com</a>
+            </address>
+            <br>
+    </footer>
 
   <script src="script.js"></script>
+
+
 </body>
 </html>
