--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VietFood Recipes</title>
-  <link rel="stylesheet" href="./CSS/styles.css">
-  <link rel="stylesheet" href="./CSS/navbar.css">
+  <link rel="stylesheet" href="./CSS/mainpage.css">
+  <link rel="stylesheet" href="./CSS/header.css">
   <link rel="stylesheet" href="./CSS/footer.css">
 </head>
 <body>
