Complete 1 individual recipe page

--- a/banhmi.html
+++ b/banhmi.html
@@ -19,20 +19,20 @@
   </div>
   <!-- breadcrumb -->
   <nav class="breadcrumb-nav">
-    <a href="recipepage.html">Recipe Page</a> > Pho Bo
+    <a href="recipepage.html">Recipe Page</a> >Banh mi
   </nav>
 
 
   <div class="main-page">
-    <img class="recipe-image" src="./media/pho.jpg" alt="Image for the recipe">
+    <img class="recipe-image" src="./media/banhmi.jpg" alt="Image for the recipe">
     <div class="title">
-      <h2>Pho Bo</h2>
+      <h2>Banh mi</h2>
     </div>
     <div class="rating">
       <h3>Difficulty rating:</h3>
       <div class="meter-container">
-        <meter max="4" min="0" value="3"></meter>
-        <span>Medium</span>
+        <meter max="4" min="0" value="2"></meter>
+        <span>Easy</span>
       </div>
     </div>
 
