Update Banh mi page

--- a/banhmi.html
+++ b/banhmi.html
@@ -19,7 +19,7 @@
   </div>
   <!-- breadcrumb -->
   <nav class="breadcrumb-nav">
-    <a href="recipepage.html">Recipe Page</a> >Banh mi
+    <a href="recipepage.html">Recipe Page</a> > Banh mi
   </nav>
 
 
@@ -39,12 +39,10 @@
 
     <div class="Introduction">
       <h3>Introduction</h3>
-      <p><strong>Phở bò</strong>, a quintessential dish of Vietnamese cuisine,
-        is a hearty and aromatic beef noodle soup that
-        embodies the essence of Vietnamese flavors. Steeped
-        in history and tradition, this beloved dish consists
-        of tender slices of beef, rice noodles, and a fragrant broth
-        infused with spices such as star anise, cinnamon, and cloves.
+      <p><strong>Bánh mì</strong>, a delectable fusion of French and Vietnamese culinary influences, is a beloved street
+        food staple that has captured the hearts and taste buds of food enthusiasts around the globe. Originating from
+        the vibrant streets of Saigon, this iconic sandwich is a testament to Vietnam's rich cultural tapestry and its
+        ability to adapt and innovate.
       </p>
       <p>The ingredients are for 2-people portion.
       </p>
@@ -63,66 +61,100 @@
         </thead>
         <tbody>
           <tr>
-            <td>Pho noodle (raw)</td>
+            <td>French bread</td>
+            <td>bread</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>pork meat</td>
             <td>gram</td>
             <td>500</td>
           </tr>
           <tr>
-            <td>Beef sirloin</td>
+            <td>Galangal</td>
             <td>gram</td>
-            <td>500</td>
+            <td>30</td>
           </tr>
           <tr>
-            <td>Onion/shallots</td>
-            <td>-</td>
+            <td>lemongrass</td>
+            <td>stack</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Green Onion</td>
-            <td>-</td>
-            <td>2</td>
-          </tr>
-          <tr>
-            <td>Coriander</td>
+            <td>tumeric</td>
             <td>gram</td>
-            <td>100</td>
+            <td>5</td>
           </tr>
           <tr>
-            <td>Ginger</td>
+            <td>sugar/honey</td>
             <td>gram</td>
             <td>50</td>
           </tr>
           <tr>
-            <td>Beef bone</td>
+            <td>salt</td>
             <td>gram</td>
-            <td>700</td>
+            <td>25</td>
           </tr>
           <tr>
-            <td>Dried cinnamon, cardamom, tangerine peel, star anise, cloves, coriander seeds</td>
-            <td>pieces</td>
-            <td>2 each</td>
+            <td>lime juice</td>
+            <td>gram</td>
+            <td>10</td>
           </tr>
           <tr>
-            <td>Sugar</td>
-            <td>tbsp</td>
-            <td>4</td>
+            <td>soy sauce</td>
+            <td>ml</td>
+            <td>40</td>
           </tr>
           <tr>
-            <td>Salt</td>
-            <td>tbsp</td>
+            <td>sesame seeds</td>
+            <td>-</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>cucumber</td>
+            <td>-</td>
+            <td>1</td>
+          </tr>
+          <tr>
+            <td>lettuce</td>
+            <td>-</td>
+            <td>1</td>
+          </tr>
+          <tr>
+            <td>other veggies (optional)</td>
+            <td>-</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>bamboo skewers</td>
+            <td>-</td>
+            <td>a few</td>
+          </tr>
+          <tr>
+            <td>tomatoes</td>
+            <td>-</td>
             <td>2</td>
           </tr>
           <tr>
-            <td>Water</td>
-            <td>liter</td>
-            <td>3</td>
-          </tr>
-          <tr>
-            <td>Fish sauce</td>
-            <td>tbsp</td>
+            <td>chili peppers</td>
+            <td>-</td>
             <td>2</td>
           </tr>
-        </tbody>
+          <tr>
+            <td>purple onion / shallots</td>
+            <td>-</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>onion</td>
+            <td>-</td>
+            <td>1</td>
+          </tr>
+          <tr>
+            <td>fish sauce, sugar</td>
+            <td>tbsp</td>
+            <td>to taste (1-2)</td>
+          </tr </tbody>
       </table>
 
 
@@ -132,19 +164,21 @@
     <div class="instructions">
       <h3>Instructions</h3>
       <ul>
-        <li>Peel and slice onions. Finely chop coriander roots. Separate green and white parts of onions, then
-          finely chop the green parts. Clean and drain accompanying vegetables</li>
-        <li>Preparing the Pho Spices: Place dried cinnamon, anise, orange peel, cloves, and coriander seeds in a
-          cloth bag and tie tightly. These spices are crucial for pho's flavor.</li>
-        <li>Making the Beef Broth: Thoroughly clean beef bones. Boil a pot of water and briefly parboil the
-          bones to remove any odors. Bake the parboiled bones with ginger and shallots until golden. Then,
-          immediately place them in an ice water bath to enhance flavor. Simmer baked bones, spice bag, onion,
-          and ginger for 5-6 hours to make a flavorful broth. Remove ingredients, strain the broth, season
-          with salt and sugar and fish sauce to taste.</li>
-        <li>Presentation and Enjoyment: Clean and thinly slice beef sirloin and brisket. Briefly blanch white
-          parts of onions and pho noodles in boiling water. Arrange green onions and noodles in a bowl, top
-          with beef sirloin, coriander, shallots, and chili. Pour hot broth over the ingredients. Serve with
-          herbs, chili sauce, and hoisin sauce. Enjoy your pho!</li>
+        <li>Utensils: Charcoal grill, electric grill (if no charcoal grill is available), large bowl, tongs…</li>
+        <li>Clean pork thoroughly with salt water, then slice into thin, even pieces.</li>
+        <li>Clean and crush turmeric, galangal, and lemongrass for marinating the meat.</li>
+        <li>Marinate the sliced pork with the crushed galangal, lemongrass, turmeric, along with 25g of salt, 50g of
+          white sugar (or honey), 10g of lime juice, 40ml of soy sauce, and a sprinkle of toasted sesame seeds. Wrap the
+          marinated meat tightly and let it rest for at least 1 hour, allowing the flavors to meld.</li>
+        <li>Skewer marinated pork. Grill the skewered pork over charcoal for about 8-10 minutes, flipping regularly
+          until cooked through and golden brown.</li>
+        <li>Sauce preparation:</li>
+        <li>Dice 3 tomatoes and 2 chili peppers. Finely chop purple onions and 1 onion. Sauté the purple onions until
+          fragrant, then add the tomatoes and cook until soft. Season with 2 teaspoons of fish sauce and 1 teaspoon of
+          sugar, stir well. Add the chopped chili peppers and onions to the mixture, bring to a boil, and adjust
+          seasoning to taste. Pour the sauce into a bowl.</li>
+        <li>Slice bread and fill it with lettuce, herbs, and cucumber. Add the grilled pork and sauce to the sandwich.
+          Serve and enjoy your delicious grilled pork sandwich!</li>
       </ul>
     </div>
 
@@ -152,15 +186,15 @@
     <div class="video-container">
       <h3>Video Reference</h3>
       <div class="video-player">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WlosNFMCnE4?si=t_d8mm_MJbU0e3tQ"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/hGylYhY0NA4?si=GYz836yQkwN5DcEI"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
       </div>
-      
+
       <div class="video-note">
-        <p>Video reference from my favorite YouTuber, Joshua 😊</p>
-        <p>He’s not Viet but his Pho is legit (I tried his recipe already, trust me!)</p>
+        <p>another variant recipe!</p>
+        <!-- <p>He’s not Viet but his Pho is legit (I tried his recipe already, trust me!)</p> -->
       </div>
     </div>
 
