finalize for recipes

--- a/banhmi.html
+++ b/banhmi.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pho bo Page</title>
+  <title>Banh mi Page</title>
   <link rel="stylesheet" href="./CSS/recipe.css">
   <link rel="stylesheet" href="./CSS/header.css">
   <link rel="stylesheet" href="./CSS/footer.css">
@@ -19,7 +19,7 @@
   </div>
   <!-- breadcrumb -->
   <nav class="breadcrumb-nav">
-    <a href="recipepage.html">Recipe Page</a> > Banh mi
+    <a href="recipepage.html">Recipe Page</a> > <strong>Banh mi</strong>
   </nav>
 
 
