--- a/phobo.html
+++ b/phobo.html
@@ -19,7 +19,7 @@
   </div>
   <!-- breadcrumb -->
   <nav class="breadcrumb-nav">
-    <a href="recipepage.html">Recipe Page</a> > Pho Bo
+    <a href="recipepage.html">Recipe Page</a> > <strong>Pho bo</strong>
   </nav>
 
 
