--- a/recipepage.html
+++ b/recipepage.html
@@ -26,7 +26,7 @@
             <div class="search">
                 <input type="text" id="searchInput" placeholder="Search the food you'd like to know about.." onkeypress="handleSearch(event)">
             </div>
-            <div id="searchResults">
+            <div class = "search-result" id="searchResults">
                 <!-- Search results will be displayed here -->
             </div>
 
