Update Form, finishing the code

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <div class="navbar">
     <a class="active" href="index.html">Main Page</a>
     <a href="recipepage.html">Recipe Page</a>
-    <a href="#">Add Recipe</a>
+    <a href="form.html">Add Recipe</a>
   </div>
 
   <div class="main-page">
 
-
+    
     <!-- Title -->
     <div class="title">
       <h1>WELCOME TO VIETFOOD RECIPES WEBPAGE</h1>
