--- a/nemcuon.html
+++ b/nemcuon.html
@@ -15,7 +15,7 @@
   <div class="navbar">
     <a href="index.html">Main Page</a>
     <a class="active" href="recipepage.html">Recipe Page</a>
-    <a href="#">Add Recipe</a>
+    <a href="form.html">Add Recipe</a>
   </div>
   <!-- breadcrumb -->
   <nav class="breadcrumb-nav">
@@ -118,8 +118,21 @@
           and chili.</li>
         <li>That's it! Dip the spring rolls in the dipping sauce and enjoy!</li>
       </ul>
+    </div class="video-container">
+      <h3>Video Reference</h3>
+      <div class="video-player">
+        <video controls poster="./media/vidnemcuon.jpeg" width="600" src="./media/nemCuonVid.mp4">
+          <p> Your browser does not support HTML5 videos</p>
+          <p>
+              <a href="./media/nemCuonVid.mp4">
+                  You can download the video for Her in mp4 format
+              </a></p>
+        </video>
+      </div>
+      <div class="video-note">
+        <p>Video reference from <strong>Chubby Whale - YouTube</strong></p>
+      </div>
     </div>
-
 
 
     <div class="author">
