--- a/recipepage.html
+++ b/recipepage.html
@@ -13,7 +13,7 @@
         <div class="navbar">
             <a href="index.html">Main Page</a>
             <a class="active" href="recipepage.html">Recipe Page</a>
-            <a href="#">Add Recipe</a>
+            <a href="form.html">Add Recipe</a>
         </div>
 
         <!-- Main Page -->
