--- a/form.html
+++ b/form.html
@@ -70,12 +70,12 @@
 
       <div class="form-group">
         <label for="description">Description</label>
-        <textarea id="description" name="description" rows="4"></textarea>
+        <textarea id="description" name="description" placeholder="Enter a basic description of your dishes" rows="2"></textarea>
       </div>
 
       <div class="form-group">
         <label for="instructions">Instruction</label>
-        <textarea id="instructions" name="instructions" rows="4"></textarea>
+        <textarea id="instructions" name="instructions" placeholder="Detailed steps listed here" rows="4"></textarea>
       </div>
 
       <div class="form-group">
@@ -105,7 +105,7 @@
 
       <div class="button-group">
         <button type="submit">Submit Recipe</button>
-        <button type="reset" class="reset-button">Reset</button>
+        <button type="reset" class="reset-button">Reset All</button>
       </div>
     </form>
 
